tests/ui/unknown_field_attr.stderr
error: unknown field attribute; expected `with`, `arbitrary`, `shrink`, or `default`
 --> tests/ui/unknown_field_attr.rs:5:16
  |
5 |   #[quickcheck(bogus)]
  |                ^^^^^
